@@ -1,3 +1,8 @@
+2006-06-28  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/lib/mkmf-gnome2.rb: Fixed wrong include path.
+	* src/rbglib.h: Increment version info.
+
 2006-06-18  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgobj_type.c: Fixed a problem when the object which extends Module
